<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/main_screen"
        android:id="@+id/mainScreen"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_enable_recovery"
        android:title="@string/enable_password_recovery"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_reset_app_data"
        android:title="@string/reset_app_menu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_transfer_ownership"
        android:title="@string/transfer_ownership"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/privacy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/instructions"
        android:title="@string/menu_instructions"
        app:showAsAction="never" />

</menu>