<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/employee_search"
        android:id="@+id/employeeSearch"/>

    <item
        android:title="@string/employee_details"
        android:id="@+id/employeeDetails"/>

    <item
        android:title="@string/employee_list"
        android:id="@+id/employeeList"/>

    <item
        android:id="@+id/action_copy"
        android:title="@string/copying"
        android:icon="@drawable/ic_content_copy"
        app:showAsAction="ifRoom"
        android:orderInCategory="20"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="10"/>

    <item
        android:title="@string/main_screen"
        android:id="@+id/mainScreen"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:orderInCategory="5"/>
</menu>