<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/spacing_s"
    android:layout_marginHorizontal="@dimen/spacing_xs"
    app:cardBackgroundColor="@color/sky_blue"
    app:cardCornerRadius="12dp"
    app:strokeColor="@color/black"
    app:strokeWidth="1dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_s">

        <TextView
            android:id="@+id/row_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/row_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/row_good_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/good_count"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/row_expired_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/expired_count"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/row_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>