<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint_green"
    android:fitsSystemWindows="true"
    tools:context=".UI.activities.ProductList">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/no_products_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_m"
        android:layout_marginHorizontal="@dimen/spacing_m"
        app:cardBackgroundColor="@color/sky_blue"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="488dp">

        <TextView
            android:id="@+id/no_products_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_m"
            android:text="@string/no_products"
            android:textColor="@color/black"
            style="@style/OutlinedBox"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_m"
        android:contentDescription="@string/product_list"
        style="@style/OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/no_products_card"
        app:layout_constraintBottom_toTopOf="@id/product_details_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_details_button"
        style="@style/DarkGreenPillBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing_xxl"/>

</androidx.constraintlayout.widget.ConstraintLayout>